--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -3,14 +3,6 @@
   height: 560px;
   width: 100vw;
 }
-/* .ant-carousel .slick-slide {
-  text-align: center;
-  overflow: hidden;
-} */
-
-/* .ant-carousel .slick-slide h3 {
-  color: rgb(22, 2, 2);
-} */
 
 .poster-carousel {
   object-fit: cover;
@@ -31,11 +23,11 @@
 
 .text-block {
   position: absolute;
-  bottom: 30px;
+  bottom: 40px;
   left: 0px;
   width: 33vw;
   height: 50%;
-  background-color: rgb(228, 228, 228, 0.9);
+  background-color: rgba(238, 238, 238, 0.9);
   padding: 20px;
   padding-right: 20px;
 }
