problem with cors

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -6,3 +6,8 @@
   margin-top: 8px;
   float: left;
 }
+
+.ant-menu.ant-menu-dark .ant-menu-item-selected,
+.ant-menu-submenu-popup.ant-menu-dark .ant-menu-item-selected {
+  background-color: #16385a !important;
+}
