--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -15,17 +15,26 @@
   top: 120px;
   padding-left: 20px;
   padding-top: 5px;
-  background-color: rgba(82, 252, 4, 0.7);
+  background-color: rgba(122, 122, 122, 0.7);
   color: #076103;
   height: 30px;
-  width: 28%;
+  width: 15%;
+}
+
+.tag-title {
+  padding-left: 20px;
+  padding-top: 5px;
+  background-color: rgba(122, 122, 122, 0.7);
+  color: #076103;
+  height: 30px;
+  width: 15%;
 }
 
 .text-block {
   position: absolute;
   bottom: 50px;
   left: 0px;
-  width: 28vw;
+  width: 40vw;
   height: 60%;
   background-color: rgba(238, 238, 238, 0.9);
   padding: 25px;
