adding credits crew

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -6,5 +6,6 @@
 }
 
 .ant-layout-content {
-  background-color: rgb(2, 21, 41);
+  /* background-color: rgb(2, 21, 41); */
+  background-image: linear-gradient(to bottom, #021529, #06192c, #0b1d2f, #0f2033, #142436);
 }
