loaders on homepage

--- a/src/components/global.css
+++ b/src/components/global.css
@@ -7,7 +7,7 @@
 
 .ant-layout-content {
   /* background-color: rgb(2, 21, 41); */
-  background-image: linear-gradient(to bottom, #021529, #06192c, #0b1d2f, #0f2033, #142436);
+  background-image: linear-gradient(to bottom, #021529, #3e4557, #7a7d8a, #babac1, #fbfbfb);
 }
 
 .ant-tabs-nav .ant-tabs-tab-active {
