--- a/src/components/carousel.css
+++ b/src/components/carousel.css
@@ -18,7 +18,7 @@
   background-color: rgba(122, 122, 122, 0.7);
   color: #076103;
   height: 30px;
-  width: 15%;
+  width: 245px;
 }
 
 .tag-title {
@@ -27,7 +27,7 @@
   background-color: rgba(122, 122, 122, 0.7);
   color: #076103;
   height: 30px;
-  width: 15%;
+  width: 245px;
 }
 
 .text-block {
